# marktug

./: .gitignore  CMakeLists.txt  README.md  f405.cmake  toolchain.cmake  write.sh
src/: CMakeLists.txt  autopilot.cpp  autopilot.h  compass.cpp  compass.h  debug.cpp  debug.h  extcount.cpp  extcount.h  fifo.h  gps.cpp  gps.h  i2c.cpp  i2c.h  i2c_bitbang.cpp  ibus.cpp  ibus.h  itime.h  latlong.cpp  latlong.h  led.c  marktug.cpp  motors.cpp  motors.h  pi.h  ppm.cpp  ppm.h  qmc5883.cpp  qmc5883.h  startup_stm32f40_41xxx.s  stdbulkusb.c  stm32_flash_f405.ld  systemtime.h  usart.cpp  usart.h
test/: CMakeLists.txt  autopilot-test.cpp  fifo-test.cpp  gps-test.cpp  latlong-test.cpp  ppm-test.cpp  time-mock.h
